--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
     <h1>Task Lister Lite™️</h1>
 
     <form id="create-task-form" action="#" method="post">
+      <input type="hidden" id="userOriginal" name="userOriginal" value="">
+      <input type="hidden" id="descriptionOriginal" name="descriptionOriginal" value ="">
+      <input type="hidden" id="priorityOriginal" name="priorityOriginal" value="">
+      
+      <label for="user">User:</label>
+      <input type="text" id="user" name="user" placeholder="user">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <label for="priority">Priority:</label>
+      <select id="priority" name="priority">
+        <option value="high">High</option>
+        <option value="medium">Medium</option>
+        <option value="low">Low</option>
+      </select>
       <input type="submit" value="Create New Task">
     </form>
 
